force-app/main/default/objects/User/fields/Actual_year_to_date_revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_year_to_date_revenue__c</fullName>
    <label>Actual year to date revenue (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>