force-app/main/default/objects/User/fields/Assigned_Countries__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Countries__c</fullName>
    <label>Assigned Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NEED LIST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>