force-app/main/default/objects/User/fields/Attainment_Absolute__c.field-meta.xml
<CustomField>
    <fullName>Attainment_Absolute__c</fullName>
    <formula>(Actual_year_to_date_revenue__c  +   Bad_debts_write_offs__c )/  Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attainment (Absolute)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>