force-app/main/default/objects/User/fields/Attainment_Relative__c.field-meta.xml
<CustomField>
    <fullName>Attainment_Relative__c</fullName>
    <formula>( Actual_year_to_date_revenue__c   +  Bad_debts_write_offs__c) / ( Target__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attainment (Absolute_)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>