force-app/main/default/objects/User/fields/Bad_debts_write_offs__c.field-meta.xml
<CustomField>
    <fullName>Bad_debts_write_offs__c</fullName>
    <label>Bad debts &amp; write-offs (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>