force-app/main/default/objects/User/fields/Country_Group__c.field-meta.xml
<CustomField>
    <fullName>Country_Group__c</fullName>
    <label>Country Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AFRICA</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>Baltics</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>BENEFRUX</fullName>
                <isActive>false</isActive>
                <label>BENEFRUX</label>
            </value>
            <value>
                <fullName>CEE</fullName>
                <isActive>false</isActive>
                <label>CEE</label>
            </value>
            <value>
                <fullName>Czech Republic</fullName>
            </value>
            <value>
                <fullName>DACH</fullName>
            </value>
            <value>
                <fullName>DK</fullName>
            </value>
            <value>
                <fullName>FI</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>IB</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>JAPAC (all other)</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>MENA</fullName>
            </value>
            <value>
                <fullName>NL</fullName>
            </value>
            <value>
                <fullName>NL/BE</fullName>
                <isActive>false</isActive>
                <label>NL/BE</label>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>Poland</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>SG/Japan/South Korea</fullName>
                <label>SG/Japan/South Korea (inact)</label>
            </value>
            <value>
                <fullName>South Korea</fullName>
            </value>
            <value>
                <fullName>Turkey</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>