force-app/main/default/objects/User/fields/Last_year_revenue__c.field-meta.xml
<CustomField>
    <fullName>Last_year_revenue__c</fullName>
    <label>Last year revenue (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>