force-app/main/default/objects/User/fields/Navision_Sales_Person_Code__c.field-meta.xml
<CustomField>
    <fullName>Navision_Sales_Person_Code__c</fullName>
    <formula>UPPER(LEFT(FirstName, 1)&amp; IF(LEN(LastName) &lt; 9 ,LastName, LEFT(LastName, 9)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Navision Sales Person Code</label>
    <type>Text</type>
</CustomField>