force-app/main/default/objects/User/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <description>Legal office of the Sales person</description>
    <label>Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amsterdam</fullName>
            </value>
            <value>
                <fullName>Antwerpen</fullName>
            </value>
            <value>
                <fullName>Copenhagen</fullName>
            </value>
            <value>
                <fullName>Dusseldorf</fullName>
            </value>
            <value>
                <fullName>Hamburg</fullName>
            </value>
            <value>
                <fullName>Helsinki</fullName>
            </value>
            <value>
                <fullName>Istanbul</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Madrid</fullName>
            </value>
            <value>
                <fullName>Milan</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Oslo</fullName>
            </value>
            <value>
                <fullName>Prague</fullName>
            </value>
            <value>
                <fullName>Stockholm</fullName>
            </value>
            <value>
                <fullName>Vilnius</fullName>
            </value>
            <value>
                <fullName>Warsaw</fullName>
            </value>
            <value>
                <fullName>Minsk</fullName>
            </value>
            <value>
                <fullName>Paris</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>Shanghai</fullName>
            </value>
            <value>
                <fullName>Johannesburg</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Vienna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>