force-app/main/default/objects/User/fields/Projection__c.field-meta.xml
<CustomField>
    <fullName>Projection__c</fullName>
    <description>Gediminas projection</description>
    <label>Projection (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>