force-app/main/default/objects/User/fields/Sales_Person_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_Code__c</fullName>
    <label>Sales Person Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>